Lots of changes here!  Re-starting the project, so removed the old stuff and re-implemented (the language has changed!) the bare-bones REPL.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,18 @@
 	repository = "https://github.com/relision/reli"
 	homepage = "https://github.com/relision/reli"
 	description = """
-The Elision term rewriter.
+The relision term rewriter.
 """
 
 [dependencies]
 	# The linenoise library provides history and line parsing.
-	linenoise-rust = "~0.1.5"
+	linenoise-rust = "~0.1.13"
 	# The num library provides arbitrary precision integers.
-	num = "~0.1.15"
+	num = "~0.1.27"
 	# The getopts library provides simple command line parsing.
 	getopts = "*"
 	# We need lazy static data.
-	lazy_static = "~0.1.8"
+	lazy_static = "~0.1.15"
 
 [lib]
 	name = "relision"
